--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/burrito?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/burrito
 spring.datasource.username=root
 spring.datasource.password=taco
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
